--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <p>I'm <span class="typed" data-typed-items="Marketing Analyst, R enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/mirzamujanovic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://mirza-mujanovic.medium.com/" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -75,7 +76,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business. Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019 I completed my bachelor’s studies in business administration at the Vienna University of Economics and Business (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
         </div>
 
         <div class="row">
@@ -83,11 +84,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <h3> Marketing Data Analyst &amp;</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -107,8 +104,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+             Using data analytics and statistical methods, I am aiming to support marketing teams in key decisions related to marketing performance, budget, customer acquisition, retention, CLV/CAC and ROAS. I conduct analytics and modeling projects to develop insights and recommend actions to optimize the performance of marketing channels. Additionally, I develop analytics powered solutions to improve the monitoring and steering of our marketing KPI's.
             </p>
           </div>
         </div>
