--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Mirza Mujanovic</h1>
+      <h1>Mirza Mujanović</h1>
       <p>I'm <span class="typed" data-typed-items="Marketing Analyst, R enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/mirzamujanovic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -76,7 +76,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business. Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019 I completed my bachelor’s studies in business administration at the Vienna University of Economics and Business (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
+          <p>I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business(WU). Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019, I completed my bachelor’s studies in business administration at the (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
         </div>
 
         <div class="row">
@@ -84,21 +84,18 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> Marketing Data Analyst &amp;</h3>
+            <h3> Marketing Data Analyst </h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> mirza.mujanovic@gmail.com </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +43 67761734194</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Vienna, Austria</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master of Science</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
