--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business(WU). Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019, I completed my bachelor’s studies in business administration at the (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
+          <p style="text-align:justify">I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business(WU). Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019, I completed my bachelor’s studies in business administration at the (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
         </div>
 
         <div class="row">
