--- a/index.html
+++ b/index.html
@@ -234,58 +234,72 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
+            
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Master of Science Marketing</h4>
+              <h5>2019 - 2021</h5>
+              <p><em> Vienna University of Economics and Business, Austria</em></p>
+              <p>In the “Masters in Marketing” ranking by QS, WU's Master's Program in Marketing again achieved an excellent 10th place out of a total of 93 programs. </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Master Class Central and Eastern Europe </h4>
+              <h5>2019 - 2020</h5>
+              <p><em> Vienna University of Economics and Business, Austria</em></p>
+              <p>The Master Class Central and Eastern Europe at WU‘s Competence Center for Emerging Markets and CEE provides
+future managers with relevant qualifi cations for successful
+careers in CEE.</p>
             </div>
-          </div>
+            <div class="resume-item">
+              <h4>Bachelor of Science Business Administration</h4>
+              <h5>2015 - 2019</h5>
+              <p><em>Vienna University of Economics and Business, Austria</em></p>
+              <p></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Economics </h4>
+              <h5>2014 - 2015</h5>
+              <p><em> University of Tuzla, Faculty of Economics,Tuzla , Bosnia and Herzegovina</em></p>
+              <p>Two semesters completed.</p>
+            </div>
+      <!-- ======= Till here is the left part of CV ======= -->              </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Teaching Assistant - Marketing Engineering</h4>
+              <h5>03-2021 - 06-2021</h5>
+              <p><em>WU, Vienna, Austria</em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>e-Learning Assistant</h4>
+              <h5>02-2020 - 12-2020</h5>
+              <p><em>WU, Vienna, Austria</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Teaching Assistant - Market Research Design and Analysis </h4>
+              <h5>10-2020 - 12-2020</h5>
+              <p><em>WU, Vienna, Austria</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Teaching Assistant - Marketing Research</h4>
+              <h5>07-2020 - 09-2020</h5>
+              <p><em>WU, Vienna, Austria</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Intern </h4>
+              <h5>07-2020 - 07-2020</h5>
+              <p><em>Coca-Cola HBC, Sarajevo, Bosnia and Herzegovina</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Marketing Assistant </h4>
+              <h5>07-2020 - 09-2020</h5>
+              <p><em>Drope BnB, Athens, Greece</em></p>
             </div>
           </div>
         </div>
-
       </div>
     </section><!-- End Resume Section -->
 
@@ -681,8 +695,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Mirza Mujanović</h3>
+      <p>Passion is priceless.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
