--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
     </section><!-- End Facts Section -->
 
-    <!-- ======= Skills Section ======= -->
+    <!-- ======= Skills Section ======= 
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -561,39 +561,38 @@ careers in CEE.</p>
         <div class="owl-carousel testimonials-carousel" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-            <p>
+            <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/igor-dra%C5%A1kovi%C4%87-4a76a2167/'>Igor Drašković</a></h3>
+           
+            <h4>LinkedIn Recommendation</h4>
+            <p style="text-align:justify" >
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              Mirza Mujanović is a great example of a student, professor-advisor and person that is willing to help others in difficult and time-managing situations. He helped me with my Assignments in Advance Qualitative analysis, particularly with the R program. His detailed explanations and and passion, enabled me to understand multiple linear regressions, mediation and running different scrips within the R program.I recommend Mirza to any person that is perhaps struggling within the content and area in Statistics, Marketing and Communication science.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-            <p>
+            <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/marija-veselinovic-31829b11a/'>Marija Veselinović</a></h3>
+            <h4>LinkedIn Recommendation</h4>
+            <p style="text-align:justify" >
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+              Mirza helped me, and at the same time was tutoring me with one project in R that required the use of a GAMLSS package.
+His contribution was excellent, and I can strongly recommend him. He was very effective and punctual with his timing and project completion. He explains everything very well in detail. I plan to continue to work with him in order to gain as much knowledge about R as possible. Mirza is reliable, open and has a great mindset that makes it a real pleasure to work with him. Apart from being an effective, he is also very warm and helpful to others.I give him my highest recommendation!
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-            <p>
+            <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/marija-veselinovic-31829b11a/'>Vibeke Foss - Gorgeous Geek</a></h3>
+            <h4>LinkedIn Recommendation</h4>
+            <p style="text-align:justify">
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+              Mirza helped me out with growing our social media presence for our new shop Just Say It Sonny. My business partner and I had some brand guidelines in place, but not very defined plan. We felt extremely fortunate to have connected with Mirza, who was impressively proactive with great ideas and a contagious get-going attitude. He voluntarily took upon himself the task of doing market research and developing an online strategy, which he adapted over time according to the results. He also took care of the agenda and progress update for our weekly calls. Mirza is absolutely reliable and communicative, and has a great positive mindset that makes it a pleasure to work with him. It was a relief to have someone so capable taking care of our online marketing, and we give him our highest recommendation.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
-          <div class="testimonial-item">
+  <!---     <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
             <h4>Freelancer</h4>
@@ -602,9 +601,9 @@ careers in CEE.</p>
               Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div> -->
 
-          <div class="testimonial-item">
+  <!---     <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
             <h3>John Larson</h3>
             <h4>Entrepreneur</h4>
@@ -613,7 +612,7 @@ careers in CEE.</p>
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div>-->
 
         </div>
 
