--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
+    <!-- ======= Facts Section ======= 
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
@@ -269,9 +269,6 @@ careers in CEE.</p>
               <h4>Teaching Assistant - Marketing Engineering</h4>
               <h5>03-2021 - 06-2021</h5>
               <p><em>WU, Vienna, Austria</em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              </ul>
             </div>
             <div class="resume-item">
               <h4>e-Learning Assistant</h4>
@@ -303,7 +300,13 @@ careers in CEE.</p>
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+<!-- Download button -->    
+    <div class="text-center">  
+    <a href="https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/CV/my_cv.pdf" style="text-align: center" class="btn btn-primary" role="button">Download Resume</a>
+    </div>
+        <!-- End of Download button -->    
+
+<!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -565,9 +568,9 @@ careers in CEE.</p>
            
             <h4>LinkedIn Recommendation</h4>
             <p style="text-align:justify" >
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              <i>
               Mirza Mujanović is a great example of a student, professor-advisor and person that is willing to help others in difficult and time-managing situations. He helped me with my Assignments in Advance Qualitative analysis, particularly with the R program. His detailed explanations and and passion, enabled me to understand multiple linear regressions, mediation and running different scrips within the R program.I recommend Mirza to any person that is perhaps struggling within the content and area in Statistics, Marketing and Communication science.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </i>
             </p>
           </div>
 
@@ -575,20 +578,20 @@ careers in CEE.</p>
             <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/marija-veselinovic-31829b11a/'>Marija Veselinović</a></h3>
             <h4>LinkedIn Recommendation</h4>
             <p style="text-align:justify" >
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              <i>
               Mirza helped me, and at the same time was tutoring me with one project in R that required the use of a GAMLSS package.
 His contribution was excellent, and I can strongly recommend him. He was very effective and punctual with his timing and project completion. He explains everything very well in detail. I plan to continue to work with him in order to gain as much knowledge about R as possible. Mirza is reliable, open and has a great mindset that makes it a real pleasure to work with him. Apart from being an effective, he is also very warm and helpful to others.I give him my highest recommendation!
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+             </i>
             </p>
           </div>
 
           <div class="testimonial-item">
-            <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/marija-veselinovic-31829b11a/'>Vibeke Foss - Gorgeous Geek</a></h3>
+            <h3><a class='btn btn-link'  href='https://www.linkedin.com/in/vibekefoss/'>Vibeke Foss - Gorgeous Geek</a></h3>
             <h4>LinkedIn Recommendation</h4>
             <p style="text-align:justify">
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              <i>
               Mirza helped me out with growing our social media presence for our new shop Just Say It Sonny. My business partner and I had some brand guidelines in place, but not very defined plan. We felt extremely fortunate to have connected with Mirza, who was impressively proactive with great ideas and a contagious get-going attitude. He voluntarily took upon himself the task of doing market research and developing an online strategy, which he adapted over time according to the results. He also took care of the agenda and progress update for our weekly calls. Mirza is absolutely reliable and communicative, and has a great positive mindset that makes it a pleasure to work with him. It was a relief to have someone so capable taking care of our online marketing, and we give him our highest recommendation.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </i>
             </p>
           </div>
 
@@ -698,9 +701,6 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
       <p>Passion is priceless.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
