--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
-        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <!--<li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
+        <li><a href="#services"><i class="bx bx-server"></i> <span>Projects</span></a></li>
+       <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>-->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mirza Mujanović</h1>
-      <p>I'm <span class="typed" data-typed-items="Marketing Analyst, R enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Marketing Data Analyst, Marketing Resaerch Consultant, R enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/mirzamujanovic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://mirza-mujanovic.medium.com/" class="medium"><i class="bx bxl-medium"></i></a>
@@ -229,7 +229,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!--<p></p> -->
         </div>
 
         <div class="row">
@@ -257,12 +257,12 @@ careers in CEE.</p>
               <p></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Economics </h4>
+              <h4>Bachelor of Economics (no degree) </h4>
               <h5>2014 - 2015</h5>
               <p><em> University of Tuzla, Faculty of Economics,Tuzla , Bosnia and Herzegovina</em></p>
               <p>Two semesters completed.</p>
             </div>
-      <!-- ======= Till here is the left part of CV ======= -->              </div>
+      <!-- ======= Till here is the left part of CV ======= -->   </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
@@ -306,7 +306,7 @@ careers in CEE.</p>
     </div>
         <!-- End of Download button -->    
 
-<!-- ======= Portfolio Section ======= -->
+<!-- ======= Portfolio Section =======
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -459,12 +459,12 @@ careers in CEE.</p>
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Project Section ======= -->
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>Projects</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -478,7 +478,7 @@ careers in CEE.</p>
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
+              <h4><a href="">Text Mining and NLP in Marketing</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
@@ -491,7 +491,7 @@ careers in CEE.</p>
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
+              <h4><a href="">Social Media Analytics</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
@@ -504,12 +504,12 @@ careers in CEE.</p>
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
+              <h4><a href="">Customer Analytics</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+  <!---        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -551,7 +551,7 @@ careers in CEE.</p>
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section><!-- End Projects Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -622,7 +622,7 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section =======
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -630,10 +630,10 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
           <h2>Contact</h2>
         </div>
 
-        <div class="row mt-1">
+    <div class="row mt-1">
 
-          <div class="col-lg-4">
-            <div class="info">
+     <div class="col-lg-4">
+           <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
