--- a/index.html
+++ b/index.html
@@ -479,7 +479,13 @@ careers in CEE.</p>
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Text Mining and NLP in Marketing</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>
+                <ul>
+                  <li>
+                    <a href="https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/emotions-in-online-customer-reviews.html" target="_blank">Emotions in customer reviews</a>
+                  </li>
+                </ul>
+              </p>
             </div>
           </div>
 
