--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ careers in CEE.</p>
               </div>
               <h4><a href="">Text Mining and NLP in Marketing</a></h4>
               <p>
-                <ul>
+                <ul style="text-align:left">
                   <li>
                     <a href="https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/emotions-in-online-customer-reviews.html" target="_blank">Emotions in customer reviews</a>
                   </li>
@@ -498,7 +498,16 @@ careers in CEE.</p>
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Social Media Analytics</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>
+                <ul style="text-align:left">
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/twitter-analysis-for-co2mustgo-initiative.html target="_blank"> Twitter Analysis </a>
+                  </li>
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/job-interview-social-media-data.html target="_blank"> Social Media Data Analysis</a>
+                  </li>
+                </ul>
+              </p>
             </div>
           </div>
 
@@ -511,10 +520,27 @@ careers in CEE.</p>
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Customer Analytics</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>
+                <ul style="text-align:left">
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/customer-churn-prediction.html target="_blank"> Customer Churn Prediction </a>
+                  </li>
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/prediction-with-rfm.html target="_blank"> Prediction with RFM </a>
+                  </li>
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/rfm-for-customer-segmentation.html target="_blank"> RFM for Segmentation </a>
+                  </li>
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/identification-of-price-insensitive-customers.html target="_blank"> Detection Price Insensitive Customers </a>
+                  </li>
+                  <li>
+                  <a href=https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/recommender-for-beauty-products.html target="_blank"> Recommendation System </a>
+                  </li>
+                </ul>
+              </p>
             </div>
           </div>
-
   <!---        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
