--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ careers in CEE.</p>
               <p>
                 <ul style="text-align:left">
                   <li>
-                    <a href="https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/emotions-in-online-customer-reviews.html" target="_blank">Emotions in customer reviews</a>
+                    <a href="https://mirzamujanovic.github.io/Mirza_Mujanovic_Portfolio/emotions-in-online-customer-reviews.html" target="_blank">Emotions in Customer Reviews</a>
                   </li>
                 </ul>
               </p>
