--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section =======
+    <!-- ======= Contact Section ======= 
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -751,12 +751,12 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
 
     <div class="row mt-1">
 
-     <div class="col-lg-4">
+   <div class="col-lg-4">
            <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4></h4>
+                <p></p>
               </div>
 
               <div class="email">
@@ -771,19 +771,19 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
                 <p>+1 5589 55488 55s</p>
               </div>
 
-            </div>
+            </div> 
 
-          </div>
+          </div> 
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-12 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
-                <div class="col-md-6 form-group">
+                <div class="col-md-12 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
                 </div>
-                <div class="col-md-6 form-group">
+                <div class="col-md-12 form-group">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
@@ -804,14 +804,14 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> 
 
         </div>
 
       </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main> <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -819,8 +819,8 @@ His contribution was excellent, and I can strongly recommend him. He was very ef
       <h3>Mirza Mujanović</h3>
       <p>Passion is priceless.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+     <!--   <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
