--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mirza Mujanović</h1>
-      <p>I'm <span class="typed" data-typed-items="Marketing Data Analyst, Marketing Resaerch Consultant, R enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Marketing Data Analyst, Marketing Research Consultant, R enthusiast"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/mirzamujanovic/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://mirza-mujanovic.medium.com/" class="medium"><i class="bx bxl-medium"></i></a>
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p style="text-align:justify">I am an ever-curious, eager to learn and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business(WU). Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019, I completed my bachelor’s studies in business administration at the (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
+          <p style="text-align:left">I am an ever-curious and ready to adapt student in his final semester of Marketing master program at the Vienna University of Economics and Business(WU). Originally, I come from Tuzla, Bosnia & Herzegovina, but in 2015 moved to Vienna to finish studies. In 2019, I completed my bachelor’s studies in business administration at the (WU), and enrolled master's program. Thinking of my future plans I see myself working in the field of data analytics or data science for marketing.</p>
         </div>
 
         <div class="row">
