--- a/index.html
+++ b/index.html
@@ -205,26 +205,60 @@ careers in CEE.</p>
               <h4>Teaching Assistant - Marketing Engineering</h4>
               <h5>03-2021 - 06-2021</h5>
               <p><em>WU, Vienna, Austria</em></p>
+              <ul>
+              <li>Preparation of students for the course through extended learning materials and exercises in customer relationship management topics.</li>
+              <li>Mentoring and helping during Customer-Centricity Simulation.</li>
+              <li>Collaborating on GitHub </li>
+              </ul> 
             </div>
             <div class="resume-item">
               <h4>e-Learning Assistant</h4>
               <h5>02-2020 - 12-2020</h5>
               <p><em>WU, Vienna, Austria</em></p>
+              <ul>
+              <li>Creation of R code files for different methods.</li>
+              <li>Video tutorials for different methods.</li>
+              <li>
+               <a href="https://github.com/IMSMWU/MRDA2020">Working on R tutorials GitHub Page.</a>
+              </li>
+              <li>Interactive learning tutorials using "learnr" package.</li>
+              <li>Interactive visualization using R Shiny.</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Teaching Assistant - Market Research Design and Analysis </h4>
               <h5>10-2020 - 12-2020</h5>
               <p><em>WU, Vienna, Austria</em></p>
+              <ul>
+              <li>Preparation of students for the course through extended learning materials in statistics and exercises in R.</li>
+              <li>Mentoring and helping with statistics and R during group works.</li>
+              <li>
+                <a href="https://imsmwu.github.io/MRDA2020/">Preparation of statistics-based learning materials for the course in R.</a>
+              </li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Teaching Assistant - Marketing Research</h4>
               <h5>07-2020 - 09-2020</h5>
               <p><em>WU, Vienna, Austria</em></p>
+              <ul>
+              <li>Preparation of students for the course through extended learning materials in statistics and exercises in R.</li>
+              <li>Helping with statistics and R during group works.</li>
+              <li>
+                <a href="https://github.com/IMSMWU/MarketingResearch">Updating statistics-based learning materials in R on the GitHub page.</a>
             </div>
             <div class="resume-item">
               <h4>Intern </h4>
               <h5>07-2020 - 07-2020</h5>
               <p><em>Coca-Cola HBC, Sarajevo, Bosnia and Herzegovina</em></p>
+              <ul>
+              <li>Working on a project "Impact of Coronavirus on E-commerce in FMCG industry in Bosnia and Herzegovina"</li>
+              <li>Conducting a primary research related to the project topic.</li>
+              <li>
+                <a href=""> Drawing business implications for Coca Cola HBC from our primary research.</a>
+              </li>
+              </ul>
+              
             </div>
             <div class="resume-item">
               <h4>Marketing Assistant </h4>
@@ -268,7 +302,7 @@ careers in CEE.</p>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="bx bx-line-chart" style="color: #fff;"></i>
-            <h3>Tableu</h3>
+            <h3>Tableau</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
